--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    {% feed_meta %}
   </head>
 
   <body>
@@ -91,7 +92,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    -->
     {% for js_name in page.extra_js %}
     <script src="{{ js_name }}"></script>
     {% endfor %}
