--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
     {% for css_name in page.extra_css %}
     <link rel="stylesheet" href="{{ css_name }}">
     {% endfor %}
+    <link rel="stylesheet" href="/assets/syntax.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -46,6 +47,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a href="/publications/">Publications</a></li>
+            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 	    <li class="dropdown">
