--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a href="/publications/">Publications</a></li>
+{% comment %}
             <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
+{% endcomment %}
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 	    <li class="dropdown">
