blog post on computational reflection.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,9 @@
     {% for css_name in page.extra_css %}
     <link rel="stylesheet" href="{{ css_name }}">
     {% endfor %}
-    <link rel="stylesheet" href="/assets/syntax.css">
+    {% if page.highlight %}
+    <link rel="stylesheet" href="/css/syntax.css">
+    {% endif %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -47,9 +49,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a href="/publications/">Publications</a></li>
-{% comment %}
             <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
-{% endcomment %}
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 	    <li class="dropdown">
@@ -95,10 +95,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
+    {% comment %}
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    -->
+    {% endcomment %}
     {% for js_name in page.extra_js %}
     <script src="{{ js_name }}"></script>
     {% endfor %}
