rename the blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a href="/publications/">Publications</a></li>
-            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
+            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Reflections</a></li>
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 	    <li class="dropdown">
