fixing up some code and bib entries.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,10 +86,12 @@
     {{ content }}
 
     <div class="container">
-      <hr />
+      <div style="clear: both;">
+      <hr width="10%" />
       <footer>
         <p>&copy; gregory malecha 2015</p>
       </footer>
+      </div>
     </div> <!-- /container -->
 
 
