--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1 post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
-  <article class="post-content">
+  <article class="post-content" style="text-align: justify">
     {{ content }}
   </article>
 
