--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,18 +15,16 @@
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <style type="text/css">
-      body { padding-top: 50px; padding-bottom: 20px; }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
 
     {% for css_name in page.extra_css %}
-    <link rel="stylesheet" href="{{ css_name }}">
+    <link rel="stylesheet" type="text/css" href="{{ css_name }}">
     {% endfor %}
     {% for js_name in page.extra_js_head %}
-    <script src="{{ js_name }}"></script>
+    <script type="application/javascript" src="{{ js_name }}"></script>
     {% endfor %}
     {% if page.highlight %}
-    <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css">
     {% endif %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -43,16 +41,13 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">gregory malecha</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a href="/publications/">Publications</a></li>
-            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a href="/blog/">Reflections</a></li>
+            <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a title="my publications" href="/publications/">Publications</a></li>
+            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a title="my blog" href="/blog/">Reflections</a></li>
 	  </ul>
           <ul class="nav navbar-nav navbar-right">
 	    <li class="dropdown">
