a bit more cleanup.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="container">
 <div class="col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1 post">
 
   <header class="post-header">
@@ -12,4 +13,5 @@ layout: default
     {{ content }}
   </article>
 
+</div>
 </div>
