--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,109 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
-    <meta name="author" content="{{ site.author }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    {% comment %}<link rel="icon" href="/favicon.ico">{% endcomment %}
-
-    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
-
-    {% for css_name in page.extra_css %}
-    <link rel="stylesheet" type="text/css" href="{{ css_name }}">
-    {% endfor %}
-    {% for js_name in page.extra_js_head %}
-    <script type="application/javascript" src="{{ js_name }}"></script>
-    {% endfor %}
-    {% if page.highlight %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css">
-    {% endif %}
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    {% feed_meta %}
-  </head>
-
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-	    <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">gregory malecha</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li{% if page.category == 'publication' or page.url == '/publications/' %} class="active"{% endif %}><a title="my publications" href="/publications/">Publications</a></li>
-            <li{% if page.category == 'blog' or page.url == '/blog/' %} class="active"{% endif %}><a title="my blog" href="/blog/">Reflections</a></li>
-	  </ul>
-          <ul class="nav navbar-nav navbar-right">
-	    <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Coq<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-		<li><a href="//github.com/coq-ext-lib/coq-ext-lib">ExtLib</a></li>
-		<li><a href="//github.com/gmalecha/mirror-core">MirrorCore</a></li>
-{% comment %}	<li><a href="#proof-forge">Proof Forge</a></li> {% endcomment %}
-		<li><a href="//github.com/gmalecha/template-coq">TemplateCoq</a></li>
-		<li><a href="//github.com/gmalecha/coq-plugin-utils">Plugin Utils</a></li>
-		<li><a href="//github.com/coq-ext-lib/coq-compile">Coq Compiler</a></li>
-		<li><a href="//plv.csail.mit.edu/bedrock/">Bedrock</a></li>
-		<li><a href="//github.com/ynot-harvard/ynot">Ynot</a></li>
-              </ul>
-            </li>
-	    <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">JavaScript<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-		<li><a href="/games/jigsaw/">Jigsaw</a></li>
-		<li><a href="/games/sliding/">Sliding Tile</a></li>
-              </ul>
-            </li>
-{% comment %}
-	    <li{% if page.category == 'ceramics' or page.url == '/ceramics/index.html' %} class="active"{% endif %}><a href="/ceramics/">Ceramics</a></li>
-{% endcomment %}
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {% include head.html %}
+    <body id="page-top" class="index">
+    {% include nav.html %}
 
     {{ content }}
 
-    <div class="container">
-      <div style="clear: both;">
-      <hr width="10%" />
-      <footer>
-        <p>&copy; gregory malecha 2015</p>
-      </footer>
-      </div>
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
-    {% comment %}
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-    {% endcomment %}
-    {% for js_name in page.extra_js %}
-    <script src="{{ js_name }}"></script>
-    {% endfor %}
-  </body>
+    {% include footer.html %}
+    {% include js.html %}
+    </body>
 </html>
