--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,30 @@
 ---
 layout: default
 ---
-<div class="container">
-<div class="col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1 post">
+<article class="container">
+  <section class="row">
+    <div class="{{ site.layout.margin-class }}">
+      <!-- <div class="text-center"> -->
+      <!-- <span style="display: inline-block;" class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> -->
+      <h1 style="display: inline-block;" class="post-title">{{ page.title }}</h1>
+      <!-- <span style="display: inline-block;" class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> -->
+      <!-- </div> -->
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+      <p class="post-meta secondary-text">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    </div>
+  </section>
 
-  <article class="post-content" style="text-align: justify">
-    {{ content }}
-  </article>
+  <section class="row">
+    <div class="{{ site.layout.margin-class }}">
+      {{ content }}
+    </div>
+  </section>
 
-</div>
-</div>
+{% unless page.disable_comments %}
+  <section class="row comments">
+    <div class="{{ site.layout.margin-class }}">
+{% include js_disqus.html %}
+    </div>
+  </section>
+{% endunless %}
+</article>
