rtac technical overview.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   </section>
 
   <section class="row">
-    <div class="{{ site.layout.margin-class }}">
+    <div class="{{ site.layout.margin-class }} text-justify">
       {{ content }}
     </div>
   </section>
