fixing https force.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <script>
-      if (window.location.host == '{{ site.host }}' && window.location.protocol != 'https:') { 
+      if (window.location.host == '{{ site.hostname }}' && window.location.protocol != 'https:') { 
         window.location.protocol = 'https:';
       }
     </script>
