fixing some bugs.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
         <!-- 'Sticky' (non-collapsing) right-side menu item(s) -->
         <div class="navbar-header pull-right">
           <ul class="nav pull-right">
-	    <li class="nav-rss"><a href="{{ site.base_url }}/feed.xml">
+	    <li class="nav-rss"><a href="{{ "/feed.xml" | absolute_url }}">
 		<i class="fa fa-rss"></i>
 	    </a></li>
             <!-- Add any additional bootstrap header items.  This is a drop-down from an icon -->
