--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
-    <link rel="stylesheet" href="{{ "/css/style.css" }}">
+    <link rel="stylesheet" href="{{ "/css/style.css" | relative_url }}">
 
     <!-- Google verification -->
     {% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
@@ -23,7 +23,7 @@
     {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" }}">
+    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | relative_url }}">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -34,7 +34,7 @@
     <script type="application/javascript" src="{{ js_name }}"></script>
     {% endfor %}
     {% if page.highlight %}
-    <link rel="stylesheet" type="text/css" href="//{{ site.baseurl }}/css/syntax.css">
+    <link rel="stylesheet" type="text/css" href="{{ "/css/syntax.css" | relative_url }}">
     {% endif %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
