--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,8 +1,8 @@
  <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery-1.11.0.js" }}"></script>
+    <script src="{{ "/js/jquery-1.11.0.js" | relative_url }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" }}"></script>
+    <script src="{{ "/js/bootstrap.min.js" | relative_url }}"></script>
 
     <!-- Plugin JavaScript -->
 
