--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,18 +14,27 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 
-    <link rel="stylesheet" href="{{ "/css/style.css" | relative_url }}">
 
-    <!-- Google verification -->
-    {% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
+    <!-- Bootstrap core CSS -->
+    <link href="{{ "/css/bootstrap.min.css" }}" rel="stylesheet">
 
-    <!-- Bing Verification -->
-    {% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
+    <!-- Material Design Bootstrap -->
+    <link href="{{ "/css/mdb.min.css" }}" rel="stylesheet">
+
+    <link href="{{ "/css/style.css" }}" rel="stylesheet">
+
+    {% if site.google_verify %}<!-- Google verification -->
+    <meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
+
+    {% if site.bing_verify %}<!-- Bing Verification -->
+    <meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" }}">
+    {% comment %}
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    {% endcomment %}
 
     {% for css_name in page.extra_css %}
     <link rel="stylesheet" type="text/css" href="{{ css_name }}">
@@ -33,9 +42,7 @@
     {% for js_name in page.extra_js_head %}
     <script type="application/javascript" src="{{ js_name }}"></script>
     {% endfor %}
-    {% if page.highlight %}
-    <link rel="stylesheet" type="text/css" href="{{ "/css/syntax.css" | relative_url }}">
-    {% endif %}
+    <link rel="stylesheet" type="text/css" href="{{ "/css/syntax.css" }}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
