--- a/_layouts/card-page.html
+++ b/_layouts/card-page.html
@@ -50,14 +50,8 @@ layout: default
       </ul>
     </div>
 
-    <div class="card-block">
-      <section class="meta-data" title="meta-data">
-	<h1 class="card-title">{{ page.title }}</h1>
-	<small>{{ page.author }} @ {{ page.date | date: "%b %-d, %Y" }}</small>
-      </section>
-      <main>
-	{{ content }}
-      </main>
+    <div class="card-block" style="margin-right: 20pt;">
+      {{ content }}
     </div>
   </div>
 
