--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     {% include head.html %}
     <body id="page-top" class="index">
     {% include nav.html %}
+    {% include header.html %}
 
     {{ content }}
 
