--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -1,30 +1,26 @@
 ---
-layout: page
+layout: card-page
 ---
-<section class="row">
-  <div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-  <h3 class="authors">{{ page.authors }}</h3>
-  <p>{{ page.abstract }}</p>
+  <h2>{{ page.title }}</h2>
+  <h4 class="authors">{{ page.authors }}</h4>
+  <blockquote><p>{{ page.abstract }}</p></blockquote>
   {% if page.links %}
-  <p>[ {% for hash in page.links %}
+  <p>{% for hash in page.links %}
     {% for lnk in hash %}
-    <a href="{{ lnk[1] }}">{{ lnk[0] }}</a>
-    {% endfor %}{% if forloop.last == false %} |{% endif %}
-    {% endfor %} ]
+    <a class="btn btn-primary" href="{{ lnk[1] }}">{{ lnk[0] }}</a>
+    {% endfor %}
+    {% endfor %}
   </p>
   {% endif %}
 
   {% for tg in page.tags %}
-  <span class="label label-default">{{ tg }}</span>
+  <span class="tag tag-primary">{{ tg }}</span>
   {% endfor %}
     </div>
-</section>
 
 {% assign scontent = content|strip %}
 {% unless scontent == "" %}
-<section class="row">
-  <div class="col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
+<section class="container">
   <pre>{{ content|escape }}</pre>
-  </div>
 </section>
 {% endunless %}
