--- a/_includes/cards/pubs.html
+++ b/_includes/cards/pubs.html
@@ -4,7 +4,7 @@
     <h4 class="card-title">Latest Publications</h4>
     <p class="card-text">
       <ul class="truncating-children">
-	{% assign posts = site.categories['publication'] | sort: 'date' | reverse %}
+	{% assign posts = site.publications | sort: 'date' | reverse %}
 	{% for post in posts limit:5 %}
 	<li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	{% endfor %}
