--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
             <div class="col-md-2 offset-md-1">
                 <h5 class="title">Reflections</h5>
                 <ul class="truncating-children">
-		  {% assign posts = site.categories['reflections'] | sort: 'date' | reverse %}
+		  {% assign posts = site.posts | sort: 'date' | reverse %}
 		  {% for post in posts limit:5 %}
 		  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 		  {% endfor %}
@@ -37,7 +37,7 @@
             <div class="col-md-2">
                 <h5 class="title">Publications</h5>
                 <ul class="truncating-children">
-		  {% assign posts = site.categories['publication'] | sort: 'date' | reverse %}
+		  {% assign posts = site.publications | sort: 'date' | reverse %}
 		  {% for post in posts limit:5 %}
 		  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 		  {% endfor %}
