a lot more cleanup.

--- a/_includes/cards/name.html
+++ b/_includes/cards/name.html
@@ -1,11 +1,10 @@
 <div class="card">
   <div class="card-block" style="position: relative;">
-    <div style="display: block; float: left; text-align: center; width: 20%; margin: 5pt;">
+    <div style="display: block; float: left; text-align: center; width: 20%; margin-right: 10pt;">
       <img src="{{ "/img/gregory-malecha.jpg" }}"
-	   style="border-radius: 50%;"
-	   class="img-responsive circle">
+	   class="img-responsive">
     </div>
-    <div class="align-middle" style="display: block;">
+    <div class="align-middle" style="display: block; margin-left: 10pt; v-align: middle;">
       <h4 class="card-title" style="display: inline-block;">Gregory Malecha</h4>
       <p><i class="fa fa-envelope left"></i> gmalecha at gmail</p>
     </div>
