--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,12 +19,12 @@
     {% if page.url == '/' %}
     <a href="{{ top }}" class="navbar-brand">
       <img style="height: 34px; margin-top: 0pt; margin-bottom: 0pt; margin-right: 5pt;" src="{{ "/img/gregory-malecha.jpg" }}" />
-      {{ site_sep }} {{ page.title }}
+      Gregory Malecha
     </a>
     {% else %}
     <a href="{{ top }}" class="navbar-brand">
       <img style="height: 34px; margin-top: 0pt; margin-bottom: 0pt; margin-right: 5pt;" src="{{ "/img/gregory-malecha.jpg" }}" />
-      {{ site_sep }} {{ page.collection }}
+      {{ site_sep }} {{ page.section }}
     </a>
     {% endif %}
 
