--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,67 +1,66 @@
 <footer class="page-footer center-on-small-only">
+  <div class="social-section">
+    <ul>
+      {% for network in site.social %}
+      <li>
+	<a class="btn btn-floating btn-small circle btn-{{ network.title }}"
+	   href="{{ network.url }}">
+	  <i class="fa fa-{{ network.title }}"></i>
+	</a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
 
-    <!--Social buttons-->
-    <div class="social-section">
-        <ul>
-	  {% for network in site.social %}
-	  <li>
-	    <a class="btn btn-floating btn-small circle btn-{{ network.title }} waves-effect waves-light" href="{{ network.url }}">
-	      <i class="fa fa-{{ network.title }}"></i>
-	    </a>
-	  </li>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3 offset-md-1">
+        <h5 class="title">Gregory Malecha</h5>
+{% comment %}
+        <p>Mullings on <b>computer science</b> and <b>math</b>, from formal methods to machine learning</p>
+{% endcomment %}
+      </div>
+
+      <hr class="hidden-md-up">
+
+      <div class="col-md-2 offset-md-1">
+        <h5 class="title">Reflections</h5>
+        <ul class="truncating-children">
+	  {% assign posts = site.posts | sort: 'date' | reverse %}
+	  {% for post in posts limit:5 %}
+	  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
         </ul>
-    </div>
+      </div>
 
+      <hr class="hidden-md-up">
+
+      <div class="col-md-2">
+        <h5 class="title">Publications</h5>
+        <ul class="truncating-children">
+	  {% assign posts = site.publications | sort: 'date' | reverse %}
+	  {% for post in posts limit:5 %}
+	  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+        </ul>
+      </div>
+
+      <hr class="hidden-md-up">
+
+      <div class="col-md-2">
+        <h5 class="title">Projects</h5>
+        <ul class="truncating-children">
+	  {% for proj in site.projects %}
+          <li><a href="{{ proj.url }}" title="{{ proj.title }}">{{ proj.title }}</a></li>
+	  {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-copyright" style="background-color: rgba(0,0,0,0.8);">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 offset-md-1">
-              <h5 class="title">Gregory Malecha</h5>
-              <p>Mullings on <b>computer science</b> and <b>math</b>, from formal methods to machine learning</p>
-            </div>
-
-            <hr class="hidden-md-up">
-
-            <div class="col-md-2 offset-md-1">
-                <h5 class="title">Reflections</h5>
-                <ul class="truncating-children">
-		  {% assign posts = site.posts | sort: 'date' | reverse %}
-		  {% for post in posts limit:5 %}
-		  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-		  {% endfor %}
-                </ul>
-            </div>
-
-            <hr class="hidden-md-up">
-
-            <div class="col-md-2">
-                <h5 class="title">Publications</h5>
-                <ul class="truncating-children">
-		  {% assign posts = site.publications | sort: 'date' | reverse %}
-		  {% for post in posts limit:5 %}
-		  <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-		  {% endfor %}
-                </ul>
-            </div>
-
-            <hr class="hidden-md-up">
-
-            <div class="col-md-2">
-              <h5 class="title">Projects</h5>
-              <ul class="truncating-children">
-		{% for proj in site.projects %}
-                <li><a href="{{ proj.url }}" title="{{ proj.title }}">{{ proj.title }}</a></li>
-		{% endfor %}
-              </ul>
-            </div>
-
-        </div>
+      Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
     </div>
-    <!--/.Footer Links-->
-
-    <div class="footer-copyright" style="background-color: rgba(0,0,0,0.8);">
-        <div class="container-fluid">
-          	  Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
-        </div>
-    </div>
+  </div>
 </footer>
