--- a/_includes/js.html
+++ b/_includes/js.html
@@ -5,6 +5,7 @@
 {% comment %}
 <script type="application/javascript" src="{{ "/js/site.js" }}"></script>
 {% endcomment %}
+<script async src="https://static.addtoany.com/menu/page.js"></script>
 
 {% if site.contact == "disqus" %}
 <!-- Disqus Stuff -->
