--- a/_layouts/card-page.html
+++ b/_layouts/card-page.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-<article class="container" style="margin-top: -20pt;">
-
-  <!--Card-->
+<article class="container" style="margin-top: -30pt;">
   <div id="post-card" class="card"
        style="margin-bottom: 20pt; position: relative;">
 
@@ -25,6 +23,7 @@ layout: default
 	  </a>
 	</li>
 {% endif %}
+{% comment %}
 	<li style="margin-bottom: 10pt; height: 47px;">
 	  <a href="#" class="btn btn-circle btn-primary btn-action circle"
 	     data-toggle="dropdown" data-dropdown-target="social-share"
@@ -32,6 +31,7 @@ layout: default
 	    <i class="fa fa-share-alt" aria-hidden="true"></i>
 	  </a>
 	</li>
+{% endcomment %}
 	<li style="margin-bottom: 10pt; height: 47px;">
 	  <a class="btn btn-circle btn-facebook btn-action circle a2a_button_facebook">
 	    <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -65,7 +65,3 @@ layout: default
 {% endunless %}
 
 </article>
-
-<!-- AddToAny BEGIN -->
-<script async src="https://static.addtoany.com/menu/page.js"></script>
-<!-- AddToAny END -->
