purging old files.

--- a/_includes/cards/name.html
+++ b/_includes/cards/name.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-block" style="position: relative;">
     <div style="display: block; float: left; text-align: center; width: 20%; margin-right: 10pt;">
-      <img src="{{ "/img/gregory-malecha.jpg" }}"
+      <img src="{{ "/img/gregory-malecha-small.jpg" }}"
 	   class="img-responsive">
     </div>
     <div class="align-middle" style="display: block; margin-left: 10pt; v-align: middle;">
