--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
     <!--Navbar Brand-->
     {% if page.url == '/' %}
     <a href="{{ top }}" class="navbar-brand">
-      <img style="height: 34px; margin-top: 0pt; margin-bottom: 0pt; margin-right: 5pt;" src="{{ "/img/gregory-malecha.jpg" }}" />
+      <img style="height: 34px; margin-top: 0pt; margin-bottom: 0pt; margin-right: 5pt;" src="{{ "/img/gregory-malecha-small.jpg" }}" />
       Gregory Malecha
     </a>
     {% else %}
