--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,6 @@
 ---
 layout: card-page
 ---
-
       <section class="meta-data" title="meta-data">
 	<h1 class="card-title">{{ page.title }}</h1>
 	<small>{{ page.author }} @ {{ page.date | date: "%b %-d, %Y" }}</small>
@@ -9,3 +8,22 @@ layout: card-page
       <main>
 	{{ content }}
       </main>
+      <section class="social-share-footer">
+	<ul class="a2a_kit">
+	  <li style="margin-bottom: 10pt; height: 47px;">
+	    <a class="btn btn-circle btn-facebook btn-action circle a2a_button_facebook">
+	      <i class="fa fa-facebook" aria-hidden="true"></i>
+	    </a>
+	  </li>
+	  <li style="margin-bottom: 10pt; height: 47px;">
+	    <a class="btn btn-circle btn-twitter btn-action circle a2a_button_twitter">
+	      <i class="fa fa-twitter" aria-hidden="true"></i>
+	    </a>
+	  </li>
+	  <li style="margin-bottom: 10pt; height: 47px;">
+	    <a class="btn btn-circle btn-google-plus btn-action circle a2a_button_google_plus">
+	      <i class="fa fa-google-plus" aria-hidden="true"></i>
+	    </a>
+	  </li>
+	</ul>
+      </section>
