--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -97,3 +97,12 @@ blockquote:after {
 h3 {
     font-weight: normal;
 }
+
+.social-share-footer {
+    margin-top: 15pt;
+    text-align: center;
+    margin-bottom: -25pt;
+}
+.social-share-footer li {
+    display: inline-block;
+}
