--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: card-page
       <main>
 	{{ content }}
       </main>
-      <section class="social-share-footer">
+      <section class="social-share">
 	<ul class="a2a_kit">
 	  <li style="margin-bottom: 10pt; height: 47px;">
 	    <a class="btn btn-circle btn-facebook btn-action circle a2a_button_facebook">
