--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -98,11 +98,9 @@ h3 {
     font-weight: normal;
 }
 
-.social-share-footer {
-    margin-top: 15pt;
+.social-share {
     text-align: center;
-    margin-bottom: -25pt;
 }
-.social-share-footer li {
+.social-share li {
     display: inline-block;
 }
