--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,7 @@
     <div class="row">
       <div class="col-md-3 offset-md-1">
         <h5 class="title">Gregory Malecha</h5>
-{% comment %}
-        <p>Mullings on <b>computer science</b> and <b>math</b>, from formal methods to machine learning</p>
-{% endcomment %}
+        <p>{{ site.synopsis }}</p>
       </div>
 
       <hr class="hidden-md-up">
