a few bits of cleanup

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -19,6 +19,10 @@ nav a.navbar-brand {
     v-align: middle;
 }
 
+nav .navbar-brand a {
+    color: white;
+}
+
 nav .navbar-brand {
     width: 150px;
 }
